--- a/src/css/contact-form-field.css
+++ b/src/css/contact-form-field.css
@@ -18,6 +18,12 @@
 	width: 100%;
 }
 
+.ContactFormField--double {
+	max-width: 24em;
+	position: relative;
+	width: 100%;
+}
+
 /* Contact Form message field (textarea) */
 
 .ContactFormField--message {
@@ -105,6 +111,27 @@
 
 	.ContactFormField {
 		max-width: 33em;
+	}
+
+	/* Contact Form Field double */
+
+	.ContactFormField--double {
+		display: -webkit-box;
+		display: -moz-box;
+		display: -ms-flexbox;
+		display: -webkit-flex;
+		display: flex;
+		-webkit-flex-flow: row-reverse;
+		flex-flow: row-reverse;
+		-webkit-justify-content: space-between;
+		justify-content: space-between;
+		max-width: 33em;
+	}
+
+	/* Contact Form Field split */
+
+	.ContactFormField--split {
+		max-width: 16em;
 	}
 
 }
