--- a/src/css/logo.css
+++ b/src/css/logo.css
@@ -2,11 +2,19 @@
 /* Logo */
 
 .Logo {
-	width: 8em;
+	height: 7em;
 }
 
 .Logo--footer {
 	width: 6em;
+}
+
+/* Logo svg */
+
+.Logo svg {
+	height: 100%;
+	width: 6em;
+	display: block;
 }
 
 /* Logo select area */
@@ -20,6 +28,10 @@
 
 .Logo-inner {
 	position: relative;
+	max-width: 100%;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
 }
 
 /* Logo svg */
